--- a/frege/logic/templates/logic/help.html
+++ b/frege/logic/templates/logic/help.html
@@ -62,9 +62,9 @@
       </p>
       <img src='{% static 'logic/images/help/nav-colors.png'%}'>
 
-      <h5>הגשת חוזרת</h5>
+      <h5>הגשה חוזרת</h5>
       <p>
-        ניתן להגיש פרק שוב לשיפור הציון. על מנת לעשות זאת יש להיכנס לפרק (יופיע מסך הסיכום) ומשם ללחוץ על 'ניתן לנסות שוב' או פשוט על השאלות הרצויות. אין צורך לענות על כל השאלות מחדש - התשובות נשמרות - ואפשר, למשל, לענות רק על השאלות שבהן טעיתם (לכל שאלה יש חיווי אם התשובה נכונה או שגויה).
+        ניתן להגיש פרק שוב לשיפור הציון. על מנת לעשות זאת יש להיכנס לפרק (יופיע מסך הסיכום) ומשם ללחוץ על 'ניתן לנסות שוב' או פשוט על השאלות הרצויות. אין צורך לענות על כל השאלות מחדש - התשובות נשמרות - ואפשר, למשל, לענות רק על השאלות שבהן טעיתם (לכל שאלה יש חיווי אם התשובה נכונה או שגויה). <u>יש לבצע שוב 'סיום פרק' על מנת שהנסיון הנוסף ייחשב.</u>
       </p>
       <h5>שאלות פתוחות</h5>
       <p>
