get and log about view

--- a/frege/logic/templates/logic/basic_base.html
+++ b/frege/logic/templates/logic/basic_base.html
@@ -46,8 +46,9 @@
     <script>
       $(document).ready(function() {
         $('[data-toggle="tooltip"]').tooltip(); 
-        $("#about").click(function() {
+        $("#about").one('click', function() {
           $("#about").html('פותח על ידי אלירן חזיזה עבור אוניברסיטת תל אביב');
+          $.get("{% url 'logic:about' %}");
         });
       });
     </script>
