--- a/frege/templates/registration/login.html
+++ b/frege/templates/registration/login.html
@@ -28,9 +28,9 @@
 
     <form class="form-signin" method="post" id="login-form" onsubmit="$('#submit').prop('disabled', true); $('#submit').text('מתחבר...');">{% csrf_token %}
       <label for="id_username">שם משתמש</label>
-      <input type="text" id="id_username" value="{{username}}" name="username" class="form-control txtIn" autofocus autocorrect="off" autocapitalize="none">
+      <input type="text" id="id_username" value="{{username}}" name="username" maxlength="50" class="form-control txtIn" autofocus autocorrect="off" autocapitalize="none">
       <label for="id_password">סיסמה</label>
-      <input type="password" id="id_password" value="{{password}}" name="password" class="form-control txtIn" autocorrect="off" autocapitalize="none">
+      <input type="password" id="id_password" value="{{password}}" name="password" maxlength="50" class="form-control txtIn" autocorrect="off" autocapitalize="none">
       <div>
         <button class="btn btn-lg btn-primary btn-block" type="submit" id="submit" style="margin-top: 20px; font-size: 130%;">
           התחברות
@@ -54,9 +54,9 @@
         <p>זו כניסה ראשונה למערכת. אנא הזינו מספר ת.ז תקין בן 9 ספרות.</p>
         <p id="inp-err" class="errmsg"><p>
         <label for="id1">מספר ת.ז:</label>
-        <input id="id1" type="text" class="txtIn pull-left" style="width:50%; margin-left: 33%;" autocorrect="off" autocapitalize="none">
+        <input id="id1" type="text" class="txtIn pull-left" maxlength="10" style="width:50%; margin-left: 33%;" autocorrect="off" autocapitalize="none">
         <label for="id2">אימות:</label>
-        <input id="id2" type="text" class="txtIn pull-left" style="width:50%; margin-left: 33%;" autocorrect="off" autocapitalize="none">
+        <input id="id2" type="text" class="txtIn pull-left" maxlength="10" style="width:50%; margin-left: 33%;" autocorrect="off" autocapitalize="none">
       </div>
       <div class="modal-footer">
         <form method="post" id="register-form">{% csrf_token %}
@@ -72,6 +72,11 @@
 </div>
 <script>
 $(document).ready(function() {
+    if ($.trim($('#errors').text())) {
+        console.log('errors: ' + $.trim($('#errors').text()));
+    } else {
+        console.log('no errors');
+    }
     $('#first-btn').click();
     $("#register-form").submit(function(e) {
         $("#inp-err").empty();
