--- a/frege/templates/registration/login.html
+++ b/frege/templates/registration/login.html
@@ -74,8 +74,7 @@
 $(document).ready(function() {
     if ($.trim($('#errors').text())) {
         console.log('errors: ' + $.trim($('#errors').text()));
-    } else {
-        console.log('no errors');
+        return;
     }
     $('#first-btn').click();
     $("#register-form").submit(function(e) {
