added explanation to help page

--- a/frege/logic/templates/logic/help.html
+++ b/frege/logic/templates/logic/help.html
@@ -76,7 +76,7 @@
         <h4>הצרנות</h4>
       </div>
       <p>
-        בשאלות הצרנה אתם מתבקשים להזין הצרנה אחת (גם אם יש כמה נכונות) עבור הטענה או הטיעון הנתונים. ההצרנה חייבת להיות תקינה תחבירית על מנת שתתקבל. על מנת להזין הצרנה של טיעון, יש להזין הנחות מופרדות בפסיק, סימן ∴ ומסקנה. למשל:
+        בשאלות הצרנה אתם מתבקשים להזין הצרנה אחת (גם אם יש כמה נכונות) עבור הטענה או הטיעון הנתונים (כלומר, אם קיימת דו-משמעות יש להצרין רק אחת מהמשמעויות). ההצרנה חייבת להיות תקינה תחבירית על מנת שתתקבל. על מנת להזין הצרנה של טיעון, יש להזין הנחות מופרדות בפסיק, סימן ∴ ומסקנה. למשל:
       </p>
       <img src='{% static 'logic/images/help/form-arg.png'%}'>
 
