tt help link fix

--- a/frege/logic/templates/logic/truth_table.html
+++ b/frege/logic/templates/logic/truth_table.html
@@ -9,7 +9,7 @@
 יש למלא את הטבלה על ידי לחיצה על הערכים הנכונים. ניתן לנקות עמודה באמצעות הכפתורים מטה.
 {% endblock hint %}
 {% block hint_link %}הסבר נוסף{% endblock %}
-{% block hint_anchor %}truth-table{% endblock %}
+{% block hint_anchor %}truth-tables{% endblock %}
 
 {% block question_content %}
 
