refresh and reload in followup questions

--- a/frege/logic/templates/logic/deduction.html
+++ b/frege/logic/templates/logic/deduction.html
@@ -95,6 +95,7 @@
   }
   function getPostData() {
       return {
+          'formula':'{{question.formula}}',
           'conclusion': dd.get(dd.idx()).lit,
           'obj': JSON.stringify(dd)
       };
