--- a/frege/logic/templates/logic/truth_table.html
+++ b/frege/logic/templates/logic/truth_table.html
@@ -110,6 +110,7 @@
     }
     function getPostData() {
         return {
+            'formula':'{{question.formula}}',
             'option':$('input[name=option]:checked', '#options').val(),
             'values':[
               {% for formula in formulas %} 
