added bracket and comma input buttons

--- a/frege/logic/templates/logic/deduction.html
+++ b/frege/logic/templates/logic/deduction.html
@@ -70,6 +70,8 @@
       <input type="button" class="btn sym-btn" id="all" value="∀"/>
       <input type="button" class="btn sym-btn" id="exs" value="∃"/>
       {% endif %}
+      <input type="button" class="btn sym-btn" id="lbr" value="("/>
+      <input type="button" class="btn sym-btn" id="rbr" value=")"/>
     </div>
   </div>
 </div>
