typo fix in help page

--- a/frege/logic/templates/logic/help.html
+++ b/frege/logic/templates/logic/help.html
@@ -135,14 +135,14 @@
       </p>
 
       <a class="anchor" id="con-i"></a>
-      <h5>הכנסת קוניוקציה</h5>
+      <h5>הכנסת קוניונקציה</h5>
       <p>הפעלה:</p>
       <img src='{% static 'logic/images/help/con-i.png'%}'>
       <p>תוצאה:</p>
       <img src='{% static 'logic/images/help/con-i-2.png'%}'>
 
       <a class="anchor" id="con-e"></a>
-      <h5>הוצאת קוניוקציה</h5>
+      <h5>הוצאת קוניונקציה</h5>
       <p>הפעלה:</p>
       <img src='{% static 'logic/images/help/con-e.png'%}'>
       <p>יש להזין נוסחה:</p>
