--- a/frege/logic/templates/logic/question_base.html
+++ b/frege/logic/templates/logic/question_base.html
@@ -20,7 +20,10 @@
       {% if followup %}<a href='{% url 'logic:question' chapter.chnum question.number %}' class="btn btn-default silent btn-lg">חזרה</a>{% endif %}
       <button class="btn btn-default btn-lg" id="answer">אישור</button>
       <button class="btn btn-default {% if question.has_followup %}silent{% else %}answered{% endif %} btn-lg" {% if answer and question.has_followup %}onclick="location.href='{% url 'logic:followup' chapter.chnum question.number %}';"{% else %}style="display: none;"{% endif %} id="next">{% if question.has_followup %}המשך{% else %}שאלה הבאה{% endif %}</button>
-      <button class="btn btn-primary btn-lg" style="display: {% if can_submit %}inline{% else %}none{% endif %};" id="sum" data-toggle="modal" data-target="#chp-sbmt">סיום פרק</button>
+      <div id="sum" style="display: {% if can_submit %}inline{% else %}none{% endif %};">
+        <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#chp-sbmt">סיום פרק</button>
+        <p class="text-muted hint">הפרק עוד לא הוגש - יש ללחוץ 'סיום פרק' להגשה</p>
+      </div>
     </div>
   </div>
 </div>
